# commander_counter

./: Cargo.toml  apk_build_and_reinstall.nu
src/: lib.rs
src/app/: counter_window.rs  mod.rs  verify_window.rs
src/ui/: app_window.rs  mod.rs
ui/: counter_window.slint  main.slint  verify_window.slint
